@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 06-11-2004 moved: Random slideshow button to My Pictures (from settings)
+  - 06-11-2004 fixed: default resolution tags in skin.xml are now case-insensitive
+  - 06-11-2004 changed: default IP addresses if none are set.
   - 03-11-2004 updated: German (Austrian) language file (Thnx to CEOMR)
   - 03-11-2004 changed: progress control now can have an overlay texture
   - 02-11-2004 added: GUI code for monkeyh1
